--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -430,6 +430,80 @@ body {
   min-height: 20px;
 }
 
+/* Language Change */
+.language-wrapper {
+  position: absolute;
+  right: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.lang-ru {
+  margin-right: 10px;
+}
+
+.switch {
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+/* Checked */
+.switch__input:checked + .switch__label::before {
+  background:  linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
+}
+
+.switch__input:checked + .switch__label::after {
+  left: 16px;
+}
+
+.switch__input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 36px;
+  height: 20px;
+  opacity: 0;
+  z-index: 0;
+}
+
+/* Unchecked */
+.switch__label {
+  display: block;
+  padding: 0 0 0 44px;
+  cursor: pointer;
+}
+
+.switch__label::before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 0;
+  width: 36px;
+  height: 14px;
+  background-color: rgba(0, 0, 0, .26);
+  border-radius: 14px;
+  z-index: 1;
+  transition: background-color 0.28s cubic-bezier(.4, 0, .2, 1);
+}
+
+.switch__label::after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 14px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+  z-index: 2;
+  transition: all 0.28s cubic-bezier(.4, 0, .2, 1);
+  transition-property: left, background-color;
+}
+
 @media (max-width: 768px) {
   .time {
     min-height: 80px;
